--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Symptom Checker</h1>
+        <h1>Symptom Checker v1.3</h1>
         <form method="POST">
             <div class="symptom">
                 <label for="symptom1">Symptom 1:</label>
